refactor: 生成ファイルのControllerへの導入
