# src/main/java/com/tq_ojd/tasks_management/app/controller/TaskManagementController.java
@@ -6,10 +6,15 @@ import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 
-import com.tq_ojd.tasks_management.app.model.TaskForm;
-import com.tq_ojd.tasks_management.app.model.TaskOutput;
+import com.tq_ojd.tasks_management.app.openapi.api.TasksApi;
+import com.tq_ojd.tasks_management.app.openapi.model.RequestTask;
+import com.tq_ojd.tasks_management.app.openapi.model.ResponseTask;
 import com.tq_ojd.tasks_management.domain.model.TaskObject;
 import com.tq_ojd.tasks_management.domain.service.TasksManagementService;
+
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import jakarta.validation.Valid;
 
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -25,66 +30,84 @@ import org.springframework.web.bind.annotation.RequestMapping;
 @RestController
 @CrossOrigin(origins = "*")
 @RequestMapping("/tasks")
-public class TaskManagementController {
+public class TaskManagementController implements TasksApi{
   
   @Autowired
   private TasksManagementService tasksManagementService;
 
-  private TaskObject convertToTaskObject(TaskForm taskForm){
+  private TaskObject convertToTaskObject(RequestTask requestTask){
     TaskObject taskObject = new TaskObject();
-    taskObject.setTitle(taskForm.getTitle());
-    taskObject.setDescription(taskForm.getDescription());
-    taskObject.setCompleted(taskForm.isCompleted());
-    taskObject.setDeadline(taskForm.getDeadline());
+    taskObject.setTitle(requestTask.getTitle());
+    taskObject.setDescription(requestTask.getDescription());
+    taskObject.setCompleted(requestTask.getCompleted());
+    taskObject.setDeadline(requestTask.getDeadline());
     return taskObject;
   }
 
-  private TaskOutput convertToTaskOutput(TaskObject taskObject){
-    TaskOutput taskOutput = new TaskOutput();
-    taskOutput.setId(taskObject.getId());
-    taskOutput.setTitle(taskObject.getTitle());
-    taskOutput.setDescription(taskObject.getDescription());
-    taskOutput.setCompleted(taskObject.isCompleted());
-    taskOutput.setDeadline(taskObject.getDeadline());
-    return taskOutput;
+  private ResponseTask convertToResponseTask(TaskObject taskObject){
+    ResponseTask responseTask = new ResponseTask();
+    responseTask.setId(taskObject.getId());
+    responseTask.setTitle(taskObject.getTitle());
+    responseTask.setDescription(taskObject.getDescription());
+    responseTask.setCompleted(taskObject.isCompleted());
+    responseTask.setDeadline(taskObject.getDeadline());
+    return responseTask;
   }
 
+  @Override
   @GetMapping
-  public ResponseEntity<List<TaskOutput>> getAllTasks(){
+  public ResponseEntity<List<ResponseTask>> getAllTasks(){
     List<TaskObject> tasksList = tasksManagementService.getAllTasks();
-    List<TaskOutput> outputList = new ArrayList<>();
+    List<ResponseTask> responseList = new ArrayList<>();
     for(TaskObject taskObject : tasksList){
-      outputList.add(convertToTaskOutput(taskObject));
+      responseList.add(convertToResponseTask(taskObject));
     }
-    return ResponseEntity.ok(outputList);
+    return ResponseEntity.ok(responseList);
   }
 
+  @Override
   @GetMapping("/{id}")
-  public ResponseEntity<TaskOutput> getTask(@PathVariable int id){
+  public ResponseEntity<ResponseTask> getTask(
+    @Parameter(name = "id", description = "", required = true, in = ParameterIn.PATH) 
+    @PathVariable("id") Integer id
+) {
     TaskObject taskObject = tasksManagementService.getTask(id);
-    TaskOutput taskOutput = convertToTaskOutput(taskObject);
-    return ResponseEntity.ok(taskOutput);
+    ResponseTask responseTask = convertToResponseTask(taskObject);
+    return ResponseEntity.ok(responseTask);
   }
 
+  @Override
   @PostMapping
-  public ResponseEntity<TaskOutput> createTask(@RequestBody TaskForm taskForm) {
-      TaskObject taskObject = convertToTaskObject(taskForm);
+  public ResponseEntity<ResponseTask> createTask(
+    @Parameter(name = "RequestTask", description = "") 
+    @Valid @RequestBody(required = false) RequestTask requestTask
+  ) {
+      TaskObject taskObject = convertToTaskObject(requestTask);
       tasksManagementService.createTask(taskObject);
-      TaskOutput taskOutput = convertToTaskOutput(taskObject);
-      return ResponseEntity.ok(taskOutput);
+      ResponseTask responseTask = convertToResponseTask(taskObject);
+      return ResponseEntity.ok(responseTask);
   }
 
+  @Override
   @PutMapping("/{id}")
-  public ResponseEntity<TaskOutput> updateTask(@PathVariable int id, @RequestBody TaskForm taskForm){
-    TaskObject taskObject = convertToTaskObject(taskForm);
+  public ResponseEntity<ResponseTask> updateTask(
+    @Parameter(name = "id", description = "", required = true, in = ParameterIn.PATH) 
+    @PathVariable("id") Integer id, @Parameter(name = "RequestTask", description = "") 
+    @Valid @RequestBody(required = false) RequestTask requestTask
+) {
+    TaskObject taskObject = convertToTaskObject(requestTask);
     taskObject.setId(id);
     tasksManagementService.updateTask(taskObject);
-    TaskOutput taskOutput = convertToTaskOutput(taskObject);
-    return ResponseEntity.ok(taskOutput);
+    ResponseTask responseTask = convertToResponseTask(taskObject);
+    return ResponseEntity.ok(responseTask);
   }
 
+  @Override
   @DeleteMapping("/{id}")
-  public ResponseEntity<Void> deleteTask(@PathVariable int id){
+  public ResponseEntity<Void> deleteTask(
+    @Parameter(name = "id", description = "", required = true, in = ParameterIn.PATH) 
+    @PathVariable("id") Integer id
+) {
     tasksManagementService.deleteTask(id);
     return ResponseEntity.ok().build();
   }
